<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	tools:context="intl.who.covid19.ui.ProtectActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="32dp">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:lineSpacingMultiplier=".8"
			android:text="@string/protect_title"
			android:textSize="30sp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:drawablePadding="16dp"
			android:gravity="start|center_vertical"
			android:paddingTop="16dp"
			android:text="@string/protect_text1"
			app:drawableStartCompat="@drawable/protect1" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:drawablePadding="16dp"
			android:gravity="start|center_vertical"
			android:paddingTop="16dp"
			android:text="@string/protect_text2"
			app:drawableStartCompat="@drawable/protect2" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:drawableStart="@drawable/protect4"
			android:drawablePadding="16dp"
			android:gravity="start|center_vertical"
			android:paddingTop="16dp"
			android:text="@string/protect_text3"
			app:drawableStartCompat="@drawable/protect3" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:drawablePadding="16dp"
			android:gravity="start|center_vertical"
			android:paddingTop="16dp"
			android:text="@string/protect_text4"
			app:drawableStartCompat="@drawable/protect4" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:drawablePadding="16dp"
			android:gravity="start|center_vertical"
			android:paddingTop="16dp"
			android:text="@string/protect_text5"
			app:drawableStartCompat="@drawable/protect5" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:drawablePadding="16dp"
			android:gravity="start|center_vertical"
			android:paddingTop="16dp"
			android:text="@string/protect_text6"
			app:drawableStartCompat="@drawable/protect6" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:drawablePadding="16dp"
			android:gravity="start|center_vertical"
			android:paddingTop="16dp"
			android:text="@string/protect_text7"
			app:drawableStartCompat="@drawable/protect7" />

	</LinearLayout>
</ScrollView>