<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#fff"
	android:orientation="vertical"
	android:padding="24dp"
	tools:context="intl.who.covid19.ui.WelcomeActivity">

	<include
		android:id="@+id/header"
		layout="@layout/view_welcome_header" />

	<View
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight=".33" />

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="16dp"
		android:src="@drawable/logo" />

	<TextView
		android:id="@+id/textView_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:gravity="center_horizontal"
		android:lineSpacingMultiplier=".8"
		android:text="@string/welcome_title"
		android:textColor="@color/colorPrimary"
		android:textSize="30sp" />

	<TextView
		android:id="@+id/textView_attribution"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:gravity="center_horizontal"
		android:text="@string/welcome_attribution"
		android:textColor="#000" />

	<View
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight=".67" />

	<Button
		android:id="@+id/button_agree"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:layout_marginBottom="8dp"
		android:background="@drawable/bg_btn_blue"
		android:onClick="onButtonAgree"
		android:text="@string/welcome_agree"
		android:textColor="#fff"
		android:textSize="20sp" />

	<ProgressBar
		android:id="@+id/progressBar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginBottom="8dp"
		android:visibility="gone" />

	<TextView
		android:id="@+id/textView_privacy"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?attr/selectableItemBackground"
		android:gravity="center_horizontal"
		android:onClick="onPrivacy"
		android:text="@string/welcome_privacy"
		android:textColor="#999"
		android:textSize="12sp" />

</LinearLayout>
