<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	tools:context="intl.who.covid19.ui.InfoActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingStart="32dp"
		android:paddingTop="24dp"
		android:paddingEnd="32dp"
		android:paddingBottom="12dp">

		<Button
			android:id="@+id/button_protect"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:background="@drawable/bg_btn_ltblue"
			android:drawableStart="@drawable/home_protect"
			android:drawableEnd="@drawable/chevron_right"
			android:drawablePadding="8dp"
			android:fontFamily="@font/poppins_light"
			android:gravity="start|center_vertical"
			android:onClick="onButtonProtect"
			android:text="@string/home_protect"
			android:textColor="@color/colorPrimaryDark"
			android:textSize="20sp" />

		<Button
			android:id="@+id/button_symptoms"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:background="@drawable/bg_btn_ltblue"
			android:drawableStart="@drawable/home_symptoms"
			android:drawableEnd="@drawable/chevron_right"
			android:drawablePadding="8dp"
			android:fontFamily="@font/poppins_light"
			android:gravity="start|center_vertical"
			android:onClick="onButtonSymptoms"
			android:text="@string/home_symptoms"
			android:textColor="@color/colorPrimaryDark"
			android:textSize="20sp" />

		<Button
			android:id="@+id/button_aboutApp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="12dp"
			android:background="@drawable/bg_btn_ltblue"
			android:drawableStart="@drawable/home_about"
			android:drawableEnd="@drawable/chevron_right"
			android:drawablePadding="8dp"
			android:fontFamily="@font/poppins_light"
			android:gravity="start|center_vertical"
			android:onClick="onButtonAbout"
			android:text="@string/home_aboutApp"
			android:textColor="@color/colorPrimaryDark"
			android:textSize="20sp" />

		<View
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1" />

		<TextView
			android:id="@+id/textView_attribution"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/welcome_attribution" />

		<TextView
			android:id="@+id/textView_privacy"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?attr/selectableItemBackground"
			android:onClick="onPrivacyPolicy"
			android:text="@string/welcome_privacy"
			android:textSize="12sp" />
	</LinearLayout>
</ScrollView>